fix: build error and colos not showing in color-picker when not hex

--- a/apps/roadmap/src/app/map/card/card.component.scss
+++ b/apps/roadmap/src/app/map/card/card.component.scss
@@ -125,7 +125,7 @@ input {
   display: inline-flex;
   flex-wrap: wrap-reverse;
   position: absolute;
-  justify-content: end;
+  justify-content: flex-end;
   top: -3rem;
   padding-right: 20px;
   right: calc(1.5rem - 20px);
